--- a/resume.html
+++ b/resume.html
@@ -60,7 +60,12 @@
     <script src="/assets/templates/appResume/premium/control/controlColors.html" type="riot/tag"></script>
     <script src="/assets/templates/appResume/premium/control/controlSections.html" type="riot/tag"></script>
 
-    <script src="/assets/templates/appResume/premium/sections/menu.html" type="riot/tag"></script>
+    <script src="/assets/templates/appResume/premium/sections/menu/menu.html" type="riot/tag"></script>
+    <script src="/assets/templates/appResume/premium/sections/menu/menuOpener.html" type="riot/tag"></script>
+    <script src="/assets/templates/appResume/premium/sections/menu/menuItems.html" type="riot/tag"></script>
+    <script src="/assets/templates/appResume/premium/sections/menu/menuSections.html" type="riot/tag"></script>
+    <script src="/assets/templates/appResume/premium/sections/menu/menuSectionContacts.html" type="riot/tag"></script>
+    <script src="/assets/templates/appResume/premium/sections/menu/menuSectionSettings.html" type="riot/tag"></script>
     <script src="/assets/templates/appResume/premium/sections/nav.html" type="riot/tag"></script>
     <script src="/assets/templates/appResume/premium/sections/info.html" type="riot/tag"></script>
     <script src="/assets/templates/appResume/premium/sections/sendmail.html" type="riot/tag"></script>
@@ -83,6 +88,7 @@
     <script src="/assets/templates/appResume/premium/editable/editableLanguages.html" type="riot/tag"></script>
     <script src="/assets/templates/appResume/premium/editable/editableJobs.html" type="riot/tag"></script>
     <script src="/assets/templates/appResume/premium/editable/editableJobsItem.html" type="riot/tag"></script>
+    <script src="/assets/templates/appResume/premium/editable/editableHobby.html" type="riot/tag"></script>
     <script src="/assets/templates/appResume/premium/editable/editableVisible.html" type="riot/tag"></script>
 
     <script src="/assets/templates/appResume/premium/components/photo.html" type="riot/tag"></script>
@@ -103,6 +109,10 @@
     <script src="/assets/templates/appResume/premium/templates/template1.html" type="riot/tag"></script>
 
     <!--/ Modules /-->
+    <script src="/assets/templates/ui/input.html" type="riot/tag"></script>
+    <script src="/assets/templates/ui/textarea.html" type="riot/tag"></script>
+    <script src="/assets/templates/ui/select.html" type="riot/tag"></script>
+    <script src="/assets/templates/ui/checkbox.html" type="riot/tag"></script>
     <script src="/assets/templates/modules/notify.html" type="riot/tag"></script>
 
     <!--/ JS components /-->
@@ -119,9 +129,12 @@
     <script src="/assets/js/store/languages.js"></script>
     <script src="/assets/js/store/month.js"></script>
     <script src="/assets/js/store/hobby.js"></script>
+    <script src="/assets/js/store/coverletter.js"></script>
+    <script src="/assets/js/store/contactsPrimary.js"></script>
     <script src="/assets/js/plugins/marquee.js"></script>
     <script src="/assets/js/plugins/screens.js"></script>
     <script src="/assets/js/plugins/styles.js"></script>
+    <script src="/assets/js/plugins/scroll/scroll.Content.js"></script>
     <!-- <script src="/assets/js/components/anim.js"></script> -->
     <script src="/assets/js/components/config.js"></script>
     <script src="/assets/js/components/init.js"></script>
