--- a/public/private.html
+++ b/public/private.html
@@ -34,6 +34,7 @@
     <script src="/assets/js/libs/modernizr.custom.js"></script>
     <script src="/assets/js/libs/fastclick.min.js"></script>
     <script src="/assets/js/libs/riot/riot+compiler.update.js"></script>
+    <script src="/assets/js/libs/riot/riot-i18n.js"></script>
     <script src="/assets/js/libs/baobab.js"></script>
     <script src="/assets/js/libs/underscore-min.js"></script>
     <script src="/assets/js/libs/iscroll.js"></script>
@@ -41,6 +42,7 @@
     <script src="/assets/js/libs/jquery.cropit.js"></script>
     <script src="/assets/js/libs/moment.min.js"></script>
     <script src="/assets/js/libs/moment.ru.js"></script>
+    <script src="/assets/js/libs/jquery.mask.min.js"></script>
     <script src="/assets/js/libs/chartist.min.js"></script>
     <script src="/assets/js/libs/circliful/js/jquery.circliful.js"></script>
     <script src="/assets/js/libs/TweenLite-1.19.0.min.js"></script>
@@ -77,6 +79,7 @@
     <script src="/assets/templates/appResume/basic/sections/steps.html" type="riot/tag"></script>
     <script src="/assets/templates/appResume/basic/sections/menu.html" type="riot/tag"></script>
     <script src="/assets/templates/appResume/basic/sections/convert.html" type="riot/tag"></script>
+    <script src="/assets/templates/appResume/basic/sections/settings.html" type="riot/tag"></script>
     <script src="/assets/templates/appResume/basic/sections/screens.html" type="riot/tag"></script>
     <script src="/assets/templates/appResume/basic/components/commons.html" type="riot/tag"></script>
     <script src="/assets/templates/appResume/basic/components/education.html" type="riot/tag"></script>
@@ -92,6 +95,7 @@
     <script src="/assets/templates/appResume/basic/templates/template5.html" type="riot/tag"></script>
     <script src="/assets/templates/appResume/basic/templates/template6.html" type="riot/tag"></script>
     <script src="/assets/templates/appResume/basic/templates/template7.html" type="riot/tag"></script>
+    <!-- <script src="/assets/templates/appResume/basic/templates/template8.html" type="riot/tag"></script> -->
 
     <!--/ Offers /-->
     <script src="/assets/templates/sections/offers/plan.html" type="riot/tag"></script>
@@ -153,6 +157,7 @@
     <script src="/assets/templates/ui/slider.html" type="riot/tag"></script>
     <script src="/assets/templates/ui/dropMenu.html" type="riot/tag"></script>
     <script src="/assets/templates/ui/checkbox.html" type="riot/tag"></script>
+    <script src="/assets/templates/ui/switcher.html" type="riot/tag"></script>
     <script src="/assets/templates/ui/icons/icon-globe.html" type="riot/tag"></script>
     <script src="/assets/templates/ui/icons/icon-user.html" type="riot/tag"></script>
     <script src="/assets/templates/ui/icons/icon-control.html" type="riot/tag"></script>
@@ -185,6 +190,8 @@
     <script src="/assets/js/components/commons/utils.js"></script>
     <script src="/assets/js/components/config.js"></script>
     <script src="/assets/js/components/fetch.js"></script>
+    <script src="/assets/js/components/i18n/i18n.js"></script>
+    <script src="/assets/js/components/i18n/resume/basic/template/ru.js"></script>
 
     <script src="/assets/js/plugins/chart.js"></script>
     <script src="/assets/js/plugins/animate.js"></script>
@@ -192,6 +199,7 @@
     <script src="/assets/js/plugins/styles.js"></script>
     <script src="/assets/js/plugins/marquee.js"></script>
     <script src="/assets/js/plugins/screens.js"></script>
+    <script src="/assets/js/plugins/share.js"></script>
     <script src="/assets/js/plugins/scroll/scroll.Fix.js"></script>
     <script src="/assets/js/plugins/scroll/scroll.Progress.js"></script>
     <script src="/assets/js/plugins/scroll/scroll.Animate.js"></script>
