--- a/resume.html
+++ b/resume.html
@@ -31,6 +31,7 @@
     <script src="/assets/js/libs/modernizr.custom.js"></script>
     <script src="/assets/js/libs/fastclick.min.js"></script>
     <script src="/assets/js/libs/riot/riot+compiler.update.js"></script>
+    <script src="/assets/js/libs/riot/riot-i18n.js"></script>
     <script src="/assets/js/libs/baobab.js"></script>
     <script src="/assets/js/libs/underscore-min.js"></script>
     <script src="/assets/js/libs/iscroll.js"></script>
