--- a/public/private.html
+++ b/public/private.html
@@ -95,7 +95,8 @@
     <script src="/assets/templates/appResume/basic/templates/template5.html" type="riot/tag"></script>
     <script src="/assets/templates/appResume/basic/templates/template6.html" type="riot/tag"></script>
     <script src="/assets/templates/appResume/basic/templates/template7.html" type="riot/tag"></script>
-    <!-- <script src="/assets/templates/appResume/basic/templates/template8.html" type="riot/tag"></script> -->
+    <script src="/assets/templates/appResume/basic/templates/template8.html" type="riot/tag"></script>
+    <script src="/assets/templates/appResume/basic/templates/template9.html" type="riot/tag"></script>
 
     <!--/ Offers /-->
     <script src="/assets/templates/sections/offers/plan.html" type="riot/tag"></script>
@@ -134,7 +135,6 @@
     <script src="/assets/templates/sections/jqtest/result/jqtest-result-personality.html" type="riot/tag"></script>
     <script src="/assets/templates/sections/jqtest/result/jqtest-result-finish.html" type="riot/tag"></script>
     <script src="/assets/templates/sections/jqtest/result/jqtest-result-text.html" type="riot/tag"></script>
-
     <script src="/assets/templates/sections/jqtest/result/mobile/jqtest-result-skills.html" type="riot/tag"></script>
     <script src="/assets/templates/sections/jqtest/result/mobile/jqtest-result-orientation.html" type="riot/tag"></script>
 
@@ -203,7 +203,7 @@
     <script src="/assets/js/plugins/scroll/scroll.Fix.js"></script>
     <script src="/assets/js/plugins/scroll/scroll.Progress.js"></script>
     <script src="/assets/js/plugins/scroll/scroll.Animate.js"></script>
-    <script src="/assets/js/plugins/tutorial/selectResumePremium.js"></script>
+    <script src="/assets/js/plugins/tutorial/resumeBasic.js"></script>
 
     <script src="/assets/js/store/resume.js"></script>
     <script src="/assets/js/store/fonts.js"></script>
