--- a/public/private.html
+++ b/public/private.html
@@ -112,6 +112,7 @@
 
     <!--/ Profile /-->
     <script src="/assets/templates/sections/profile/profile.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/profile/profileData.html" type="riot/tag"></script>
 
     <!--/ Payment /-->
     <script src="/assets/templates/sections/payment/payment.html" type="riot/tag"></script>
@@ -119,6 +120,7 @@
 
     <!--/ JQ-test /-->
     <script src="/assets/templates/sections/jqtest/jqtest.html" type="riot/tag"></script>
+    <script src="/assets/templates/sections/jqtest/jqtest-enter.html" type="riot/tag"></script>
     <script src="/assets/templates/sections/jqtest/jqtest-content.html" type="riot/tag"></script>
     <script src="/assets/templates/sections/jqtest/jqtest-result.html" type="riot/tag"></script>
     <script src="/assets/templates/sections/jqtest/jqtest-result-content.html" type="riot/tag"></script>
@@ -193,7 +195,7 @@
     <script src="/assets/js/components/i18n/i18n.js"></script>
     <script src="/assets/js/components/i18n/resume/basic/template/ru.js"></script>
 
-    <script src="/assets/js/plugins/chart.js"></script>
+    <script src="/assets/js/plugins/chartRadial.js"></script>
     <script src="/assets/js/plugins/animate.js"></script>
     <script src="/assets/js/plugins/slider.js"></script>
     <script src="/assets/js/plugins/styles.js"></script>
@@ -203,6 +205,8 @@
     <script src="/assets/js/plugins/scroll/scroll.Fix.js"></script>
     <script src="/assets/js/plugins/scroll/scroll.Progress.js"></script>
     <script src="/assets/js/plugins/scroll/scroll.Animate.js"></script>
+    <script src="/assets/js/plugins/scroll/scroll.Content.js"></script>
+    <script src="/assets/js/plugins/tutorial/resumeList.js"></script>
     <script src="/assets/js/plugins/tutorial/resumeBasic.js"></script>
 
     <script src="/assets/js/store/resume.js"></script>
