--- a/pay.html
+++ b/pay.html
@@ -1,73 +1,17 @@
-
-<!DOCTYPE html SYSTEM "about:legacy-compat">
-<html class="i-ua_js_no i-ua_css_standart">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<!--[if gt IE 9]><!--><link rel="stylesheet" href="//money.yandex.ru/lego/css/_money.css?build=325">
-<!--<![endif]--><!--[if IE 6]><link rel=stylesheet href="https://money.yandex.ru/lego/css/_money.ie6.css?build=325"><![endif]--><!--[if IE 7]><link rel=stylesheet href="https://money.yandex.ru/lego/css/_money.ie7.css?build=325"><![endif]--><!--[if IE 8]><link rel=stylesheet href="https://money.yandex.ru/lego/css/_money.ie8.css?build=325"><![endif]--><!--[if IE 9]><link rel=stylesheet href="//money.yandex.ru/lego/css/_money.ie9.css?build=325"><![endif]--><!--[if gt IE 7]><!--><link rel="stylesheet" href="//money.yandex.ru/lego/css/_lego.css?build=325">
-<!--<![endif]--><!--[if lt IE 9]><link rel=stylesheet href="//money.yandex.ru/lego/css/_lego.ie.css?build=325"><![endif]--><!--[if gt IE 9]><!--><link rel="stylesheet" href="//money.yandex.ru/b/_old-site.css?v=">
-<!--<![endif]--><!--[if IE 7]><link rel=stylesheet href="//money.yandex.ru/b/_old-site.ie7.css?v="><![endif]--><!--[if IE 8]><link rel=stylesheet href="//money.yandex.ru/b/_old-site.ie8.css?v="><![endif]--><!--[if IE 9]><link rel=stylesheet href="//money.yandex.ru/b/_old-site.ie9.css?v="><![endif]--><script type="text/javascript" charset="utf-8" src="//yastatic.net/jquery/1.7.0/jquery.min.js"></script><script type="text/javascript" charset="utf-8" src="//money.yandex.ru/lego/js/_money.js?build=325"></script><script charset="utf-8" src="https://yastatic.net/lodash/2.4.1/lodash.min.js"></script><script charset="utf-8" src="//money.yandex.ru/b/_old-site.ru.js?v="></script><script charset="utf-8" src="//money.yandex.ru/lego/js/_lego.js?build=325"></script><script type="text/javascript">//<!--
-;(function(d,e,c,r){e=d.documentElement;c="className";r="replace";e[c]=e[c][r]("i-ua_js_no","i-ua_js_yes");if(d.compatMode!="CSS1Compat")e[c]=e[c][r]("i-ua_css_standart","i-ua_css_quirks")}(document));
-//--></script><script type="text/javascript">//<!--
-;(function(d,e,c,r,n,w,v,f){e=d.documentElement;c="className";r="replace";n="createElementNS";f="firstChild";w="http://www.w3.org/2000/svg";e[c]+=" i-ua_svg_"+(!!d[n]&&!!d[n](w,"svg").createSVGRect?"yes":"no");v=d.createElement("div");v.innerHTML="<svg/>";e[c]+=" i-ua_inlinesvg_"+((v[f]&&v[f].namespaceURI)==w?"yes":"no");})(document);
-//--></script><script type="text/javascript">//<!--
-Lego.init({login:'',locale:'ru',lang:'ru','content-region':'ru',id:'money','lego-static-host':'\/\/yandex.st\/lego\/2.10-112','click-host':'\/\/clck.yandex.ru','pass-host':'\/\/pass.yandex.ru','export-host':'\/\/export.yandex.ru','lego-path':'\/lego','user-region':'ru','yandexuid':'9748562401425566984','retpath':'','logout-retpath':'https%3A%2F%2Fmoney.yandex.ru%2Fapps','passport-msg':'money','passport-host':'https:\/\/passport.yandex.ru','social-host':'https:\/\/social.yandex.ru',displayName:{'social':false,name:''},'spass-add':'https:\/\/money.yandex.ru\/reg\/'})
-//--></script><link rel="Stylesheet" href="//money.yandex.ru/css/ui/widgets/b-widget-commercial.css?v=2">
-<style>#b-form__field_email {position:relative;} #b-form__field_warning {position:absolute; top:-20px; right:0; color:#dc1e26; font:12px 'Arial', Helvetica}</style>
-</head>
-<body><div class="b-widget-commercial b-widget-commercial_shop" data-content-block="this"><form method="POST" target="_blank" action="https://money.yandex.ru/quickpay/confirm.xml">
-<input name="receiver" type="hidden" value="410012719414223"><input name="quickpay-form" type="hidden" value="shop"><input name="referer" type="hidden" value="http://resumekraft.ru/jq-test/"><input name="is-inner-form" type="hidden" value="true"><table class="b-form__grid">
-<tr>
-<td class="b-form__field" colspan="2">
-<div class="b-form__label" style="font-size:18px">Прохождение JQ-теста</div>
-<input type="hidden" value="Прохождение JQ-теста" name="targets">
-</td>
-</tr>
-<tr>
-<td class="b-form__label" style="padding-top:6px"><label>Сумма</label></td>
-<td class="b-form__field">
-<input class="b-input-text__input" type="hidden" name="sum" value="96" id="sum" type="text" maxlength="10" data-type="number">
-<div class="b-form__label" style="font-size:16px"><strong>96 руб.</strong></div>
-</td>
-</tr>
-<tr>
-<td class="b-form__label"><label>Ваш email</label></td>
-<td class="b-form__field">
-<div id="b-form__field_email" class="b-input-text b-input-text_inline"><input type="text" id="email" value="" name="label" style="text-align: left;" class="b-input-text__input" placeholder="Обязательное поле" autocomplete="off"><span id="b-form__field_warning"></span></div>
-</td>
-</tr>
-<tr>
-<td class="b-form__label"><label>Способ оплаты</label></td>
-<td class="b-form__field"><span class="b-form-radio b-form-radio_size_l b-form-radio_theme_grey i-bem" onclick="return {'b-form-radio':{name:'b-form-radio',id:'id1164676562209'}}"><label class="b-form-radio__button b-form-radio__button_id_ b-form-radio__button_disabled_no b-form-radio__button_focused_yes b-form-radio__button_checked_yes b-form-radio__button_side_left" for="id1164676562217" title="платеж с карты VISA или MasterCard"><span class="b-form-radio__inner"><span class="b-form-radio__content"><input type="radio" name="paymentType" class="b-form-radio__radio" checked id="id1164676562217" value="AC"><span class="b-form-radio__text"><img class="b-icon b-form-radio__ico" src="/assets/img/quickpay/quickpay-widget__any-card.png" alt="" title=""></span><i class="b-form-radio__click"></i></span></span></label><label class="b-form-radio__button b-form-radio__button_id_ b-form-radio__button_disabled_no b-form-radio__button_next-for-checked_yes b-form-radio__button_side_right" for="id1164676562241" title="платеж из кошелька в Яндекс.Деньгах"><span class="b-form-radio__inner"><span class="b-form-radio__content"><input type="radio" name="paymentType" class="b-form-radio__radio" id="id1164676562241" value="PC"><span class="b-form-radio__text"><img class="b-icon b-form-radio__ico" src="/assets/img/quickpay/quickpay-widget__yamoney.png" alt="" title=""></span><i class="b-form-radio__click"></i></span></span></label></span></td>
-</tr>
-<tr class="b-form__buttons">
-<td style="text-align: right;"></td>
-<td><span class="b-button b-button_1 b-button_orange" data-block="b-button"><span class="b-button__inner">Оплатить</span><input id="submit" type="submit" value="Оплатить" class="b-button__input" name="submit-button"></span></td>
-</tr>
-</table>
-<input type="hidden" name="successURL" value="http://resumekraft.ru/jq-test/success"><input type="hidden" name="quickpay-back-url" value="http://resumekraft.ru/jq-test/">
-</form></div>
-<script>
-	var field = document.getElementById("b-form__field_email"),
-		email = document.getElementById("email"),
-		submit = document.getElementById("submit"),
-		warning = document.getElementById("b-form__field_warning"),
-		pattern = "^([a-z0-9_-]+)(\\.[a-z0-9_-]+)*@((([a-z0-9-а-яА-ЯёЁ]+\\.)+(рф|РФ|com|net|org|mil|edu|gov|arpa|info|biz|inc|name|[a-z]{2}))|([0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}\\.[0-9]{1,3}))$";
-
-	submit.onclick = function(e){
-		var value = email.value;
-		if (value.length < 2 || !isPattern(pattern, value.toLowerCase())){
-			e.preventDefault();
-			warning.innerHTML = "Введите свой email";
-		}
-	};
-	isPattern = function(pattern, str){
-		if (str.length && pattern.length) {
-			var re = new RegExp(pattern, "g");
-			return re.test(str);
-		}
-		return false;
-	};
-</script>
-</body>
-</html>
+<form method="POST" action="https://money.yandex.ru/quickpay/confirm.xml">
+    <input type="hidden" name="receiver" value="410012719414223">
+    <input type="hidden" name="formcomment" value="ResumeKraft: пополнение баланса на 1 месяц">
+    <input type="hidden" name="short-dest" value="ResumeKraft: пополнение баланса на 1 месяц">
+    <input type="hidden" name="label" value="">
+    <input type="hidden" name="quickpay-form" value="shop">
+    <input type="hidden" name="targets" value="Пополнение баланса">
+    <input type="hidden" name="sum" value="4568.25" data-type="number">
+    <input type="hidden" name="need-fio" value="true">
+    <input type="hidden" name="need-email" value="true">
+    <input type="hidden" name="need-phone" value="false">
+    <input type="hidden" name="need-address" value="false">
+    <label><input type="radio" name="paymentType" value="PC">Яндекс.Деньгами</label>
+    <label><input type="radio" name="paymentType" value="AC">Банковской картой</label>
+	<label><input type="radio" name="paymentType" value="MC">Со счета мобильного</label>
+    <input type="submit" value="Перевести">
+</form>
