--- a/public/private.html
+++ b/public/private.html
@@ -246,6 +246,8 @@
     <script src="/assets/js/store/education.js"></script>
     <script src="/assets/js/store/languages.js"></script>
     <script src="/assets/js/store/month.js"></script>
+    <script src="/assets/js/store/paymentMethod.js"></script>
+    <script src="/assets/js/store/paymentPeriod.js"></script>
 
     <!-- <script src="/assets/js/app.js"></script> -->
     <script src="/assets/js/jqtest/jq1.js"></script>
